# python-project-83

./: Makefile  README.md  build.sh  database.sql  pyproject.toml
.github/workflows/: build.yml
page_analyzer/: __init__.py  app.py  database.py  parser.py  validator.py
page_analyzer/templates/: index.html  layout.html  url.html  urls.html
